--- a/Kubernetes/create-simple-devops-image.yml
+++ b/Kubernetes/create-simple-devops-image.yml
@@ -6,14 +6,14 @@
   - name: create docker image using war file
     command: docker build -t simple-devops-image:latest .
     args:
-      chdir: /opt/k8s-lab
+      chdir: /etc/ansible
 
   - name: create tag to image
-    command: docker tag simple-devops-image yankils/simple-devops-image
+    command: docker tag simple-devops-image mulyonoaja/simple-devops-image
 
   - name: push image on to dockerhub
-    command: docker push yankils/simple-devops-image
+    command: docker push mulyonoaja/simple-devops-image
 
   - name: remove docker images form ansible server
-    command: docker rmi simple-devops-image:latest yankils/simple-devops-image
+    command: docker rmi simple-devops-image:latest mulyonoaja/simple-devops-image
     ignore_errors: yes
