--- a/Kubernetes/valaxy-deploy.yml
+++ b/Kubernetes/valaxy-deploy.yml
@@ -1,26 +1,29 @@
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: valaxy-deployment
+  name: tomcat-deployment
+  labels:
+    app: tomcat
 spec:
+  replicas: 3
   selector:
     matchLabels:
-      app: valaxy-devops-project
-  replicas: 2 # tells deployment to run 2 pods matching the template
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
-
+      app: tomcat
+  replicas: 3
   template:
     metadata:
       labels:
-        app: valaxy-devops-project
+        app: tomcat
     spec:
       containers:
-      - name: valaxy-devops-project
-        image: mulyonoaja/simple-devops-image
-        imagePullPolicy: Always
+      - name: tomcat-container
+        image: tomcat:8.0
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            memory: 256Mi
+            cpu: 250m
+          limits:
+            memory: 512Mi
+            cpu: 500m
